# sine-wave-denoising

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.json  sweep.json
docs/: PLAN.md  PRD.md  PRD_models.md  PROMPTS.md  TODO.md  file.md  software_submission_guidelines-V3.en.md  software_submission_guidelines-V3.md
docs/assets/: summary.json
notebooks/: results_analysis.ipynb
scripts/: check_line_count.sh  generate_readme_assets.py
src/sine_denoiser/: __init__.py  sdk.py  sweeps.py  train.py
src/sine_denoiser/data/: __init__.py  dataset.py  loader.py  noise.py  signals.py
src/sine_denoiser/evaluation/: __init__.py  metrics.py  robustness.py
src/sine_denoiser/models/: __init__.py  base.py  lstm.py  mlp.py  registry.py  rnn.py
src/sine_denoiser/plotting/: __init__.py  curves.py  predictions.py  sweep.py
src/sine_denoiser/training/: __init__.py  loop.py  optim.py
tests/: test_smoke.py
tests/integration/: test_loop.py  test_sdk.py  test_sweeps_cli.py  test_train_cli.py
tests/unit/: test_sweeps.py
tests/unit/config/: test_default_json.py
tests/unit/data/: test_dataset.py  test_loader.py  test_noise.py  test_signals.py  test_split_indices.py  test_window_loader.py
tests/unit/evaluation/: test_metrics.py  test_robustness.py
tests/unit/models/: test_base.py  test_lstm.py  test_mlp.py  test_registry.py  test_rnn.py
tests/unit/plotting/: test_curves.py  test_predictions.py  test_sweep.py
tests/unit/training/: test_optim.py
