[project]
name = "sine-wave-denoising"
version = "0.1.0"
description = "Comparing FC, RNN, and LSTM models on a sine wave denoising task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
