[project]
name = "sine-wave-denoising"
version = "0.1.0"
description = "Comparing FC, RNN, and LSTM models on a sine wave denoising task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2.4.4",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sine_denoiser"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
